<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_about_us"
            android:title="@string/nav_about_us"
           />

        <!--<item-->
            <!--android:id="@+id/nav_movies"-->
            <!--android:icon="@drawable/ic_movie_black_24dp"-->
            <!--android:title="@string/nav_movies"-->
            <!--android:visible="false"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_notifications"-->
            <!--android:icon="@drawable/ic_notifications_black_24dp"-->
            <!--android:title="@string/nav_notifications"-->
            <!--android:visible="false"/>-->
        <!--<item-->
            <!--android:id="@+id/nav_settings"-->
            <!--android:icon="@drawable/ic_settings_black_24dp"-->
            <!--android:title="@string/nav_settings"-->
            <!--android:visible="false"/>-->

    </group>

    <item android:title="Module Apps">
        <menu>
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/action_monitoringPA" />
        </menu>
    </item>

</menu>
