<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btnSyncToMobile"
        android:layout_width="273dp"
        android:layout_height="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="79dp"
        android:background="@drawable/round_button"
        android:padding="12dp"
        android:text="@string/login_text_sync_to_mobile"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <ImageView
        android:id="@+id/imageView3"
        android:contentDescription="@string/app_name"
        android:layout_width="202dp"
        android:layout_height="109dp"
        android:src="@drawable/ctagro"
        android:textAlignment="center"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="61dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/UserLayout"
        app:layout_constraintVertical_bias="0.0" />

    <!--Password-->


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="273dp"
        android:layout_height="44dp"
        android:layout_marginEnd="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="19dp"
        android:background="@drawable/round_button"
        android:padding="12dp"
        android:text="@string/login_text_btn"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:text="@string/login_text_footer"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/UserLayout"
        android:layout_width="288dp"
        android:layout_height="61dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="197dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <EditText
            android:id="@+id/input_user_name"
            android:layout_width="261dp"
            android:layout_height="match_parent"
            android:hint="@string/login_text_username_hint"
            android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890."
            android:inputType="textCapCharacters"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="12dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserLayout"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_text_password_hint"
            android:inputType="textPassword"
            />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>


