<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.device_not_found"
    tools:layout_editor_absoluteY="25dp"
    tools:layout_editor_absoluteX="0dp">


    <TextView
        android:id="@+id/textView"
        android:layout_width="293dp"
        android:layout_height="20dp"
        android:layout_marginBottom="315dp"
        android:layout_marginEnd="43dp"

        android:layout_marginLeft="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginStart="43dp"
        android:gravity="center"
        android:text="@string/activity_device_not_found_textInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />


    <TextView
        android:id="@+id/textView1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="37dp"
        android:gravity="center"
        android:text="@string/activity_device_not_found_textIMEI"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="1.0" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button1"
        android:layout_width="150dp"
        android:layout_height="56dp"
        android:layout_marginBottom="243dp"
        android:layout_marginEnd="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginRight="129dp"
        android:layout_marginStart="129dp"

        android:background="@drawable/round_button"
        android:padding="12dp"
        android:text="@string/activity_device_not_found_btnRegister"
        android:textColor="#ffffff"

        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>

